[package]
name = "totp"
version = "0.1.1"
edition = "2024"
description = "Decoder for TOTP URLs"
license = "MIT"

[workspace]
resolver = "3"
members = [
    "cli",
]

[dependencies]
# HOTP calculation
hmac = "0.12"
sha2 = "0.10.9"
sha1 = "0.10.6"
# Url parsing
url = "2.5.4"
# base32 decode
data-encoding = "2.9.0"

[lib]
name = "totp"
path = "src/lib.rs"
